--- a/template/index.html
+++ b/template/index.html
@@ -310,7 +310,7 @@
 		</div>
 	</section>
 
-	<img id="scroll" class="to-down" src="./img/up.png" alt="Наверх" style="transform: rotate(0deg);">
+	<img id="totop" class="to-down" src="./img/up.png" alt="Наверх">
 
 <!-- Footer -->
 
