--- a/css/styles.css
+++ b/css/styles.css
@@ -683,3 +683,14 @@ body {
   display: block;
   z-index: 0;
 }
+
+.mask {
+  max-width: 70%;
+  max-height: 100%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  box-shadow: 0.1rem 0.17rem 1rem #000000;
+  z-index: 0;
+}
