--- a/books/css/style.css
+++ b/books/css/style.css
@@ -52,7 +52,7 @@ a:hover {
 .header-wrapper:after {
     content: '';
     display: block;
-    background-color: #333;
+    background-color: #bbb;
     width: 80%;
     height: 0.1rem;
     margin: 0 auto;
