--- a/books/css/style.css
+++ b/books/css/style.css
@@ -60,6 +60,10 @@ a:hover {
 
 /* Main */
 
+div p {
+    margin: 0;
+}
+
 .main-content {
     margin: 15px auto 0;
 }
@@ -85,7 +89,6 @@ a:hover {
     margin: 15px auto;
     display: flex;
     height: 170px;
-    justify-content: space-around;
     padding: 15px;
     box-shadow: 0 0 40px rgba(0, 0, 0, .3) inset;
 }
@@ -100,30 +103,27 @@ a:hover {
 }
 
 .book-pic {
-    width: 15%;
+    width: 20%;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 .book-pic img {
-    max-width: 100%;
+    max-width: 80%;
     max-height: 100%;
-    vertical-align: middle;
 }
 
 .book-info-wrapper {
-    width: 65%;
+    width: 60%;
     display: flex;
     flex-wrap: wrap;
-    align-content: space-between;
-    padding: 25px 0;
+    align-content: space-around;
 }
 
 .book-title {
     width: 100%;
-    height: 70px;
-    font-size: 1.5em;
+    font-size: 1.4em;
     font-weight: 600;
     color: #202020;
 }
@@ -131,20 +131,20 @@ a:hover {
 .book-authors {
     width: 100%;
     height: 25px;
-    font-size: 1.3em;
+    font-size: 1.2em;
     color: #707070;
 }
 
 .book-publish {
     width: 100%;
     height: 25px;
-    font-size: 1.2em;
+    font-size: 1.1em;
     font-weight: 600;
     color: #5e5e5e;
 }
 
 .book-edit-conrols {
-    width: 15%;
+    width: 20%;
     display: flex;
     flex-wrap: wrap;
     margin: auto 0;
@@ -253,6 +253,12 @@ a:hover {
     color: #373737;
     background-color: #de362d96;
     transition: 0.5s;
+}
+
+/* Footer */
+
+.footer {
+    margin-top: 25px;
 }
 
 .footer-title {
